# Theseus-Chess

./: CMakeLists.txt  LICENSE  README.md  main.cpp
chess/: attacks.cpp  attacks.h  bitboard.h  init.cpp  init.h  position.h  types.h  util.cpp  util.h
tests/: test.cpp  test.h
